# voice_input

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Info.plist  LICENSE  RAEDME.md  README.md  build.rs  capture-000001.txt  clippy.toml  last_recording.txt  plan_performance.md  recording-start-latency-plan.md  rust-toolchain.toml  tasks.md  test_applescript.sh  test_japanese_applescript.sh  進捗.md
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml
.serena/: project.yml
.serena/memories/: done_checklist.md  onboarding_project_overview.md  style_and_conventions.md  suggested_commands.md
.zed/: settings.json
benches/: recording.rs
dev-docs/: ci-implementation-design.md  context-enhancement-ideas.md  default-direct-input-design.md  direct_text_insertion.md  insert_text_at_cursor.md  macos-permission-automation.md  onmemory-voice-data-cleanup.md  onmemory-voice-data.md  osascript-elimination-detail.md  osascript-elimination.md  refactor-pre.md  refactor.md
dev-docs/direct_text_insertion/: p1-1-handover.md  p1-1.md  p1-2-handover.md  p1-2.md  p1-3-handover.md  p1-3.md  p1-4-handover.md  p1-4.md  p1-5-handover.md  p1-5.md  p1-6-after-implement.md  prompt.md
dev-docs/ideas/: multi-stacking-and-paste-idea.md  shortcut-key-mode.md  voice-input-improvement-design.md
dev-docs/input_animation/: overview.md
dev-docs/multi-stacking/: overview.md
dev-docs/onmemory-voice-data/: 1-handover.md  1.md  2-handover.md  2.md  3-handover.md  3.md  4-completion.md  4.md  PERFORMANCE_ANALYSIS.md  prompt.md
dev-docs/prompts/: create-phase-detail.md
dev-docs/shortcut_mode/: interceptor-shortcut-key-idea.md  overview.md
doc/: prototyping.md
docs/: audio_compression_plan.md  insert_text_at_cursor.md  wip_USAGE_GUIDE.md
docs/benchmark/: README.md
examples/: debug_direct_input.rs  integration_test.rs  key_suppression_test.rs  security_test.rs  shortcut_key_test.rs  test_enigo_japanese.rs  text_input_demo.rs  text_input_performance.rs
rust/: .env.example  .gitignore  CLAUDE.md  Cargo.toml
rust/ime_voice_input/: Cargo.toml
rust/ime_voice_input_cli/: Cargo.toml
rust/ime_voice_inputd/: Cargo.toml
scripts/: asr_benchmark.py  build-app-bundle.sh  cleanup-app-bundle.sh  cleanup-dev-env.sh  dev-build-v2.sh  dev-build.sh  quality-check.sh  restart-app-bundle.sh  setup-app-bundle.sh  setup-dev-env.sh  setup-symlink.sh  test-phase3-performance.sh
scripts/deploy/: build.sh  cleanup.sh  common.sh  restart.sh  setup.sh
src/: audio_recoder.rs  audio_recorder.rs  cli.rs  error.rs  ipc.rs  key_monitor.rs  lib.rs  main.rs  request_speech_to_text.rs  sample_audio_recoder.rs  sound_player.rs  text_selection.rs  text_selection.sh  transcribe_audio.rs  websocket_client.rs  websocket_server.rs
src/application/: audio.rs  command_handler.rs  dictionary_service.rs  media_control_service.rs  mod.rs  recording_service.rs  service_container.rs  stack_service.rs  traits.rs  transcription_service.rs  transcription_worker.rs
src/cli/: mod.rs  record.rs  transcribe.rs
src/domain/: audio.rs  dict.rs  mod.rs  recorder.rs  stack.rs  transcriber.rs  transcription.rs
src/infrastructure/: command_handler.rs  config.rs  media_control_service.rs  mod.rs  runtime_recovery.rs  (+2 more)
swift/: Package.swift
tests/: application_module_test.rs  axobserver_poc.rs  cli_args_test.rs  cli_integration.rs  cursor_tracker_test.rs  daemon_ipc_stack_test.rs  dev_env_scripts_test.rs  e2e_direct_input_test.rs  integration_test.rs  ipc_compatibility_test.rs  ipc_serialization_test.rs  layer_dependencies_test.rs  performance_test.rs  recording_timer_test.rs  shortcut_key_handler_unit_test.rs  shortcut_service_integration.rs  shortcut_ui_integration_test.rs  stack_integration_test.rs  stack_manager_ui_test.rs  stack_memory_limit_test.rs  stack_performance_test.rs  stack_service_edge_cases.rs  stack_service_integration.rs  stack_service_ui_integration_test.rs  text_input_accessibility_test.rs  ui_performance_test.rs  user_feedback_test.rs  voice_inputd_direct_input_test.rs
(+94 files in other folders)
