[package]
name = "voice_input"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs" # 既存ライブラリ

# ─────────────────────────────────────────
# 実行バイナリ（全て [[bin]] で列挙）
# ─────────────────────────────────────────
[[bin]]
name = "voice_input" # クライアント CLI
path = "src/main.rs"

[[bin]]
name = "voice_inputd"            # 常駐デーモン
path = "src/bin/voice_inputd.rs"

[[bin]]
name = "migrate_dict"           # 辞書マイグレーション
path = "src/bin/migrate_dict.rs"


[[bin]]
name = "enigo_helper"           # Enigo入力専用ヘルパー
path = "src/bin/enigo_helper.rs"

# ─────────────────────────────────────────
# 依存クレート ― ご指定をそのまま使用
# ─────────────────────────────────────────
[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
cpal = "0.15.3"
reqwest = { version = "0.11", features = ["multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.0"
clap = { version = "4.5", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec"] }
directories = "6.0.0"
scopeguard = "1.2.0"
enigo = "0.2.0"
chrono = "0.4"
once_cell = "1.19"
thiserror = "1.0"
async-trait = "0.1"
flacenc = "0.5"

[features]
default = []
ci-test = []  # CI環境で安全に実行できるテストのみを有効化

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "recording"
harness = false
