[package]
name = "voice_input"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs" # 既存ライブラリ

# ─────────────────────────────────────────
# 実行バイナリ（全て [[bin]] で列挙）
# ─────────────────────────────────────────
[[bin]]
name = "voice_input" # クライアント CLI
path = "src/main.rs"

[[bin]]
name = "voice_inputd"            # 常駐デーモン
path = "src/bin/voice_inputd.rs"

# ─────────────────────────────────────────
# 依存クレート ― ご指定をそのまま使用
# ─────────────────────────────────────────
[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"
cpal = "0.17.3"
reqwest = { version = "0.13.2", features = ["multipart", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"
clap = { version = "4.6.0", features = ["derive"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
directories = "6.0.0"
scopeguard = "1.2.0"
enigo = "0.6.1"
chrono = "0.4.44"
once_cell = "1.21.4"
thiserror = "2.0.18"
async-trait = "0.1.89"
flacenc = "0.5.1"
rubato = "1.0.1"
audioadapter = "2.0.0"
audioadapter-buffers = "2.0.0"

[features]
default = []
ci-test = []  # CI環境で安全に実行できるテストのみを有効化

[dev-dependencies]
tempfile = "3.27.0"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "recording"
harness = false
